--- a/assets/global/styles.css
+++ b/assets/global/styles.css
@@ -324,4 +324,25 @@ ul {
     .linkout-popup-actions {
         flex-direction: column;
     }
+
+    h1 {
+        font-size: 2.5em;
+        text-decoration: underline;
+    }
+
+    h2 {
+        font-size: 2em;
+    }
+
+    h3 {
+        font-size: 1.5em;
+    }
+
+    h4 {
+        font-size: 1em;
+    }
+
+    a, p, span, ul, li {
+        font-size: 18px;
+    }
 }
